--- a/index.html
+++ b/index.html
@@ -214,10 +214,9 @@
   </div>
 </div>
 
-<!-- ===== PORTAL (COMEÇA OCULTO) ===== -->
+<!-- ===== PORTAL ===== -->
 <div class="container" id="portal" style="display:none;">
 
-  <!-- LOGO -->
   <header>
     <img src="logo-areia-ana.png" class="logo">
     <h1>Portal de Acessos – Grupo Areia Ana</h1>
@@ -232,7 +231,58 @@
     <button class="menu-btn" onclick="showSection('sistemas', this)">Sistemas</button>
   </div>
 
-  <!-- INDICADORES -->
+  <!-- ============================= -->
+  <!-- 🔶 ABA COMERCIAL (ATUALIZADA) -->
+  <!-- ============================= -->
+  <section id="comercial" class="section hidden">
+    <div class="section-title">Comercial – ClickUp</div>
+    <div class="grid">
+
+      <!-- Lista Geral -->
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
+        <div class="link-title">Lista Geral de Oportunidades</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <!-- NOVO Anderson -->
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
+        <div class="link-title">Lista de Oportunidades – Anderson</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <!-- NOVO Márcio -->
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
+        <div class="link-title">Lista de Oportunidades – Márcio</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <!-- Carteiras já existentes -->
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
+        <div class="link-title">Carteira Anderson</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
+        <div class="link-title">Carteira Márcio</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
+        <div class="link-title">Carteira Geral Unificada</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <a class="link-card" target="_blank" href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
+        <div class="link-title">Metas e Roteiro Comercial</div>
+        <div class="link-meta">ClickUp Docs</div>
+      </a>
+
+    </div>
+  </section>
+
+  <!-- ================= -->
+  <!-- 🔶 ABA INDICADORES -->
+  <!-- ================= -->
   <section id="indicadores" class="section">
     <div class="section-title">Indicadores – Power BI</div>
     <div class="grid">
@@ -263,39 +313,6 @@
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiOTQzNGRhNjQtYjNjZi00YTZjLTkxNzMtODc2MTUzZGQ0MWY5IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
         <div class="link-title">Custo por KM / Hora</div><div class="link-meta">Power BI</div>
-      </a>
-
-    </div>
-  </section>
-
-  <!-- COMERCIAL -->
-  <section id="comercial" class="section hidden">
-    <div class="section-title">Comercial – ClickUp</div>
-    <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
-        <div class="link-title">Lista Geral de Oportunidades</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
-        <div class="link-title">Carteira Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
-        <div class="link-title">Carteira Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
-        <div class="link-title">Carteira Geral Unificada</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
-        <div class="link-title">Metas e Roteiro Comercial</div>
-        <div class="link-meta">ClickUp Docs</div>
       </a>
 
     </div>
@@ -363,7 +380,7 @@
 
 <script>
   /* ===== SENHA DE ACESSO ===== */
-  const PASSWORD = 'areiaadmin'; // <- TROCAR AQUI SE QUISER OUTRA SENHA
+  const PASSWORD = 'areiaadmin'; // TROQUE AQUI
 
   function unlockPortal(event) {
     event.preventDefault();
@@ -387,7 +404,7 @@
     form.addEventListener('submit', unlockPortal);
   });
 
-  /* ===== TROCA DAS ABAS ===== */
+  /* ===== CONTROLE DAS ABAS ===== */
   function showSection(id, btn) {
     document.querySelectorAll(".section").forEach(sec => sec.classList.add("hidden"));
     document.getElementById(id).classList.remove("hidden");
