--- a/index.html
+++ b/index.html
@@ -201,13 +201,7 @@
     <div class="lock-subtitle">Digite a senha de administrador para abrir o portal.</div>
 
     <form id="lock-form">
-      <input
-        id="access-password"
-        class="lock-input"
-        type="password"
-        placeholder="Senha de acesso"
-        autocomplete="off"
-      />
+      <input id="access-password" class="lock-input" type="password" placeholder="Senha de acesso" autocomplete="off"/>
       <button type="submit" class="lock-btn">Entrar</button>
       <div id="lock-error" class="lock-error"></div>
     </form>
@@ -232,7 +226,7 @@
   </div>
 
   <!-- ============================= -->
-  <!-- 🔶 ABA COMERCIAL (ATUALIZADA) -->
+  <!-- 🔶 ABA COMERCIAL (CORRIGIDA) -->
   <!-- ============================= -->
   <section id="comercial" class="section hidden">
     <div class="section-title">Comercial – ClickUp</div>
@@ -256,7 +250,7 @@
         <div class="link-meta">ClickUp</div>
       </a>
 
-      <!-- Carteiras já existentes -->
+      <!-- Carteiras -->
       <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
         <div class="link-title">Carteira Anderson</div>
         <div class="link-meta">ClickUp</div>
@@ -288,31 +282,38 @@
     <div class="grid">
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiNjM2OGI4ZmEtOTc3Zi00NjgzLWE3MDUtYzk0NDBmMDAyN2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Remessas Usina</div><div class="link-meta">Power BI</div>
+        <div class="link-title">Remessas Usina</div>
+        <div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiM2Q3NzQ0ZDMtZjZmYy00MGJmLTg0NWYtNjU4YTlmMWUyMjUwIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Inadimplentes</div><div class="link-meta">Power BI</div>
+        <div class="link-title">Inadimplentes</div>
+        <div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiN2JlMzJiZjQtMTcyZS00ZDAyLWIwZDQtYjQxMzM1ZmM4YTE0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Pedidos – Agregados</div><div class="link-meta">Power BI</div>
+        <div class="link-title">Pedidos – Agregados</div>
+        <div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMDlhYjhkNDktZWExNC00MTNhLTg2MDctZTYxOWIyZTNjMjM0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Gastos e Retorno BTs</div><div class="link-meta">Power BI</div>
+        <div class="link-title">Gastos e Retorno BTs</div>
+        <div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMjdhNGJhYWYtOWIxMC00NzJmLWE1NTAtMmFkYmY0ZjgwYmZjIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">DRE</div><div class="link-meta">Power BI</div>
+        <div class="link-title">DRE</div>
+        <div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiYWI2N2FlYjgtODJhNi00ODZhLThjMDgtNTZlMGYyMjk4N2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Volume de Carteira – Usina</div><div class="link-meta">Power BI</div>
+        <div class="link-title">Volume de Carteira – Usina</div>
+        <div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiOTQzNGRhNjQtYjNjZi00YTZjLTkxNzMtODc2MTUzZGQ0MWY5IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Custo por KM / Hora</div><div class="link-meta">Power BI</div>
+        <div class="link-title">Custo por KM / Hora</div>
+        <div class="link-meta">Power BI</div>
       </a>
 
     </div>
@@ -342,35 +343,43 @@
     <div class="grid">
 
       <a class="link-card" target="_blank" href="https://ctasmart.com.br:8443/login">
-        <div class="link-title">CTA Smart</div><div class="link-meta">Abastecimento</div>
+        <div class="link-title">CTA Smart</div>
+        <div class="link-meta">Abastecimento</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://areiaana.bubbleapps.io/version-test/pg_administrativa">
-        <div class="link-title">Bubble – Cargas</div><div class="link-meta">Sistema Interno</div>
+        <div class="link-title">Bubble – Cargas</div>
+        <div class="link-meta">Sistema Interno</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://webmail-seguro.com.br/areiaana.com.br/">
-        <div class="link-title">E-mail Locaweb</div><div class="link-meta">Webmail</div>
+        <div class="link-title">E-mail Locaweb</div>
+        <div class="link-meta">Webmail</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://areiaana-remote.topconsuite.app:20200/pages/auth/login">
-        <div class="link-title">Topcon CRM</div><div class="link-meta">Comercial Usina</div>
+        <div class="link-title">Topcon CRM</div>
+        <div class="link-meta">Comercial Usina</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://analytics.zoho.com/workspace/1762700000040012018">
-        <div class="link-title">Topcon BI</div><div class="link-meta">Dashboards</div>
+        <div class="link-title">Topcon BI</div>
+        <div class="link-meta">Dashboards</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://areiaana.topconsuite.app/">
-        <div class="link-title">Topcon Tech</div><div class="link-meta">Tecnologia</div>
+        <div class="link-title">Topcon Tech</div>
+        <div class="link-meta">Tecnologia</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://areiaana.rastrin.app/">
-        <div class="link-title">Topcon Fleet</div><div class="link-meta">Rastreadores</div>
+        <div class="link-title">Topcon Fleet</div>
+        <div class="link-meta">Rastreadores</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://anaareiasportais.cigam.cloud/">
-        <div class="link-title">Portais CIGAM</div><div class="link-meta">ERP CIGAM</div>
+        <div class="link-title">Portais CIGAM</div>
+        <div class="link-meta">ERP CIGAM</div>
       </a>
 
     </div>
@@ -380,7 +389,7 @@
 
 <script>
   /* ===== SENHA DE ACESSO ===== */
-  const PASSWORD = 'areiaadmin'; // TROQUE AQUI
+  const PASSWORD = 'areiaadmin';
 
   function unlockPortal(event) {
     event.preventDefault();
@@ -390,8 +399,6 @@
     if (input.value === PASSWORD) {
       document.getElementById('lock-screen').style.display = 'none';
       document.getElementById('portal').style.display = 'block';
-      error.textContent = '';
-      input.value = '';
     } else {
       error.textContent = 'Senha incorreta. Tente novamente.';
       input.value = '';
@@ -399,18 +406,15 @@
     }
   }
 
-  document.addEventListener('DOMContentLoaded', function () {
-    const form = document.getElementById('lock-form');
-    form.addEventListener('submit', unlockPortal);
-  });
+  document.getElementById('lock-form').addEventListener('submit', unlockPortal);
 
-  /* ===== CONTROLE DAS ABAS ===== */
+  /* ===== TROCA DE ABAS ===== */
   function showSection(id, btn) {
-    document.querySelectorAll(".section").forEach(sec => sec.classList.add("hidden"));
-    document.getElementById(id).classList.remove("hidden");
+    document.querySelectorAll('.section').forEach(sec => sec.classList.add('hidden'));
+    document.getElementById(id).classList.remove('hidden');
 
-    document.querySelectorAll(".menu-btn").forEach(b => b.classList.remove("active"));
-    btn.classList.add("active");
+    document.querySelectorAll('.menu-btn').forEach(b => b.classList.remove('active'));
+    btn.classList.add('active');
   }
 </script>
 
