--- a/index.html
+++ b/index.html
@@ -225,57 +225,8 @@
     <button class="menu-btn" onclick="showSection('sistemas', this)">Sistemas</button>
   </div>
 
-  <!-- ============================= -->
-  <!-- 🔶 ABA COMERCIAL (CORRIGIDA) -->
-  <!-- ============================= -->
-  <section id="comercial" class="section hidden">
-    <div class="section-title">Comercial – ClickUp</div>
-    <div class="grid">
-
-      <!-- Lista Geral -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
-        <div class="link-title">Lista Geral de Oportunidades</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- NOVO Anderson -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
-        <div class="link-title">Lista de Oportunidades – Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- NOVO Márcio -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
-        <div class="link-title">Lista de Oportunidades – Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- Carteiras -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
-        <div class="link-title">Carteira Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
-        <div class="link-title">Carteira Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
-        <div class="link-title">Carteira Geral Unificada</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
-        <div class="link-title">Metas e Roteiro Comercial</div>
-        <div class="link-meta">ClickUp Docs</div>
-      </a>
-
-    </div>
-  </section>
-
   <!-- ================= -->
-  <!-- 🔶 ABA INDICADORES -->
+  <!-- 🔶 INDICADORES   -->
   <!-- ================= -->
   <section id="indicadores" class="section">
     <div class="section-title">Indicadores – Power BI</div>
@@ -314,6 +265,52 @@
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiOTQzNGRhNjQtYjNjZi00YTZjLTkxNzMtODc2MTUzZGQ0MWY5IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
         <div class="link-title">Custo por KM / Hora</div>
         <div class="link-meta">Power BI</div>
+      </a>
+
+    </div>
+  </section>
+
+  <!-- ============================= -->
+  <!-- 🔶 COMERCIAL – CORRIGIDO     -->
+  <!-- ============================= -->
+  <section id="comercial" class="section hidden">
+    <div class="section-title">Comercial – ClickUp</div>
+    <div class="grid">
+
+      <!-- Lista de Oportunidades – Anderson -->
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
+        <div class="link-title">Lista de Oportunidades – Anderson</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <!-- Lista de Oportunidades – Márcio -->
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
+        <div class="link-title">Lista de Oportunidades – Márcio</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <!-- Carteira Anderson -->
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
+        <div class="link-title">Carteira Anderson</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <!-- Carteira Márcio -->
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
+        <div class="link-title">Carteira Márcio</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <!-- Carteira Geral Unificada -->
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
+        <div class="link-title">Carteira Geral Unificada</div>
+        <div class="link-meta">ClickUp</div>
+      </a>
+
+      <!-- Metas e Roteiro Comercial -->
+      <a class="link-card" target="_blank" href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
+        <div class="link-title">Metas e Roteiro Comercial</div>
+        <div class="link-meta">ClickUp Docs</div>
       </a>
 
     </div>
