--- a/calendario.html
+++ b/calendario.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<title>Calendário Corporativo</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap">
+<style>
+body {
+    font-family: Inter, sans-serif;
+    background: #050814;
+    color: #fff;
+    margin: 0;
+    padding: 20px;
+}
+h1 { text-align:center; margin-bottom:20px; }
+.mes {
+    background:#0b1020;
+    padding:15px;
+    border-radius:12px;
+    margin-bottom:20px;
+}
+.dias {
+    display:grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap:6px;
+}
+.dia {
+    padding:10px;
+    background:#101629;
+    border-radius:8px;
+    min-height:60px;
+    position:relative;
+}
+.dia span { font-size:14px; font-weight:600; }
+.evento {
+    margin-top:4px;
+    padding:3px 5px;
+    border-radius:5px;
+    font-size:11px;
+    font-weight:600;
+}
+.vazio { background: transparent !important; }
+</style>
+</head>
+
+<body>
+<h1>Calendário Corporativo</h1>
+
+<div id="calendario"></div>
+
+<script src="calendario.js"></script>
+
+</body>
+</html>
 
