--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -24,88 +24,6 @@
       padding: 24px;
     }
 
-    /* ===== TELA DE SENHA ===== */
-    .lock-screen {
-      position: fixed;
-      inset: 0;
-      background: radial-gradient(circle at top, #151821 0, #050814 60%, #02030a 100%);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
-
-    .lock-card {
-      width: 100%;
-      max-width: 380px;
-      background: #0b1020;
-      border-radius: 16px;
-      padding: 24px 22px 20px;
-      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
-      border: 1px solid rgba(255, 154, 74, 0.35);
-      text-align: center;
-    }
-
-    .lock-logo {
-      width: 120px;
-      display: block;
-      margin: 0 auto 10px;
-    }
-
-    .lock-title {
-      font-size: 18px;
-      margin: 4px 0 2px;
-    }
-
-    .lock-subtitle {
-      font-size: 12px;
-      color: var(--text-soft);
-      margin-bottom: 16px;
-    }
-
-    .lock-input {
-      width: 100%;
-      padding: 10px 12px;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 154, 74, 0.45);
-      background: #050814;
-      color: var(--text);
-      font-size: 14px;
-      outline: none;
-      box-sizing: border-box;
-    }
-
-    .lock-input:focus {
-      border-color: var(--accent-soft);
-    }
-
-    .lock-btn {
-      width: 100%;
-      margin-top: 12px;
-      padding: 10px 12px;
-      border-radius: 999px;
-      border: none;
-      background: linear-gradient(135deg, var(--accent), var(--accent-soft));
-      color: #050814;
-      font-weight: 600;
-      font-size: 14px;
-      cursor: pointer;
-      transition: 0.15s;
-    }
-
-    .lock-btn:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 8px 18px rgba(0,0,0,0.4);
-    }
-
-    .lock-error {
-      margin-top: 8px;
-      font-size: 12px;
-      color: #ff6b81;
-      min-height: 16px;
-    }
-
-    /* ===== PORTAL ===== */
     .container {
       max-width: 1150px;
       margin: auto;
@@ -121,14 +39,21 @@
       margin-bottom: 10px;
     }
 
-    h1 { font-size: 24px; margin: 10px 0 4px 0; }
-    .subtitle { font-size: 13px; color: var(--text-soft); }
+    h1 {
+      font-size: 24px;
+      margin: 10px 0 4px 0;
+    }
+
+    .subtitle {
+      font-size: 13px;
+      color: var(--text-soft);
+    }
 
     /* MENU PRINCIPAL */
     .main-menu {
       margin: 24px 0;
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(5, 1fr); /* Indicadores, Comercial, RH, Sistemas, Calendário */
       gap: 10px;
     }
 
@@ -154,8 +79,13 @@
       border-color: var(--accent-soft);
     }
 
-    .section { margin-bottom: 28px; }
-    .hidden { display: none; }
+    .section {
+      margin-bottom: 28px;
+    }
+
+    .hidden {
+      display: none;
+    }
 
     .section-title {
       font-size: 18px;
@@ -186,33 +116,32 @@
       border-color: var(--accent-soft);
     }
 
-    .link-title { font-size: 15px; font-weight: 600; }
-    .link-meta { font-size: 11px; color: var(--text-soft); }
+    .link-title {
+      font-size: 15px;
+      font-weight: 600;
+    }
+
+    .link-meta {
+      font-size: 11px;
+      color: var(--text-soft);
+    }
+
+    /* Caixa especial pro calendário corporativo (opcional) */
+    .calendar-wrapper {
+      background: var(--bg-card);
+      border-radius: 12px;
+      border: 1px solid rgba(255, 154, 74, 0.25);
+      padding: 14px;
+    }
   </style>
 </head>
 
 <body>
+<div class="container">
 
-<!-- ===== TELA DE SENHA ===== -->
-<div id="lock-screen" class="lock-screen">
-  <div class="lock-card">
-    <img src="logo-areia-ana.png" alt="Logo Grupo Areia Ana" class="lock-logo">
-    <div class="lock-title">Acesso restrito</div>
-    <div class="lock-subtitle">Digite a senha de administrador para abrir o portal.</div>
-
-    <form id="lock-form">
-      <input id="access-password" class="lock-input" type="password" placeholder="Senha de acesso" autocomplete="off"/>
-      <button type="submit" class="lock-btn">Entrar</button>
-      <div id="lock-error" class="lock-error"></div>
-    </form>
-  </div>
-</div>
-
-<!-- ===== PORTAL ===== -->
-<div class="container" id="portal" style="display:none;">
-
+  <!-- LOGO -->
   <header>
-    <img src="logo-areia-ana.png" class="logo">
+    <img src="logo-areia-ana.png" class="logo" alt="Logo Grupo Areia Ana">
     <h1>Portal de Acessos – Grupo Areia Ana</h1>
     <p class="subtitle">Escolha uma área e clique para abrir o painel ou sistema.</p>
   </header>
@@ -223,11 +152,10 @@
     <button class="menu-btn" onclick="showSection('comercial', this)">Comercial</button>
     <button class="menu-btn" onclick="showSection('rh', this)">RH</button>
     <button class="menu-btn" onclick="showSection('sistemas', this)">Sistemas</button>
+    <button class="menu-btn" onclick="showSection('calendario', this)">Calendário</button>
   </div>
 
-  <!-- ================= -->
-  <!-- 🔶 INDICADORES   -->
-  <!-- ================= -->
+  <!-- INDICADORES -->
   <section id="indicadores" class="section">
     <div class="section-title">Indicadores – Power BI</div>
     <div class="grid">
@@ -270,45 +198,48 @@
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- 🔶 COMERCIAL – CORRIGIDO     -->
-  <!-- ============================= -->
+  <!-- COMERCIAL -->
   <section id="comercial" class="section hidden">
     <div class="section-title">Comercial – ClickUp</div>
     <div class="grid">
 
-      <!-- Lista de Oportunidades – Anderson -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
+      <!-- NOVAS LISTAS DE OPORTUNIDADES -->
+      <a class="link-card" target="_blank"
+         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
         <div class="link-title">Lista de Oportunidades – Anderson</div>
         <div class="link-meta">ClickUp</div>
       </a>
 
-      <!-- Lista de Oportunidades – Márcio -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
+      <a class="link-card" target="_blank"
+         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
         <div class="link-title">Lista de Oportunidades – Márcio</div>
         <div class="link-meta">ClickUp</div>
       </a>
 
       <!-- Carteira Anderson -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
+      <a class="link-card" target="_blank"
+         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
         <div class="link-title">Carteira Anderson</div>
         <div class="link-meta">ClickUp</div>
       </a>
 
       <!-- Carteira Márcio -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
+      <a class="link-card" target="_blank"
+         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
         <div class="link-title">Carteira Márcio</div>
         <div class="link-meta">ClickUp</div>
       </a>
 
       <!-- Carteira Geral Unificada -->
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
+      <a class="link-card" target="_blank"
+         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
         <div class="link-title">Carteira Geral Unificada</div>
         <div class="link-meta">ClickUp</div>
       </a>
 
       <!-- Metas e Roteiro Comercial -->
-      <a class="link-card" target="_blank" href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
+      <a class="link-card" target="_blank"
+         href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
         <div class="link-title">Metas e Roteiro Comercial</div>
         <div class="link-meta">ClickUp Docs</div>
       </a>
@@ -326,7 +257,8 @@
         <div class="link-meta">Controle de Ponto</div>
       </a>
 
-      <a class="link-card" target="_blank" href="https://sistema.rhgestor.com.br/login?ReturnUrl=%2fPainel%2fIndexMaster">
+      <a class="link-card" target="_blank"
+         href="https://sistema.rhgestor.com.br/login?ReturnUrl=%2fPainel%2fIndexMaster">
         <div class="link-title">RH Gestor</div>
         <div class="link-meta">Sistema de RH</div>
       </a>
@@ -382,36 +314,32 @@
     </div>
   </section>
 
+  <!-- CALENDÁRIO CORPORATIVO -->
+  <section id="calendario" class="section hidden">
+    <div class="section-title">Calendário Corporativo</div>
+
+    <div class="calendar-wrapper">
+      <a class="link-card" target="_blank"
+         href="https://masterareiaana.github.io/agenda-areia-ana/calendario.html">
+        <div class="link-title">Calendário Corporativo – Areia Ana</div>
+        <div class="link-meta">Abrir agenda completa</div>
+      </a>
+    </div>
+  </section>
+
 </div>
 
 <script>
-  /* ===== SENHA DE ACESSO ===== */
-  const PASSWORD = 'areiaadmin';
-
-  function unlockPortal(event) {
-    event.preventDefault();
-    const input = document.getElementById('access-password');
-    const error = document.getElementById('lock-error');
-
-    if (input.value === PASSWORD) {
-      document.getElementById('lock-screen').style.display = 'none';
-      document.getElementById('portal').style.display = 'block';
-    } else {
-      error.textContent = 'Senha incorreta. Tente novamente.';
-      input.value = '';
-      input.focus();
-    }
-  }
-
-  document.getElementById('lock-form').addEventListener('submit', unlockPortal);
-
-  /* ===== TROCA DE ABAS ===== */
   function showSection(id, btn) {
-    document.querySelectorAll('.section').forEach(sec => sec.classList.add('hidden'));
-    document.getElementById(id).classList.remove('hidden');
+    // esconde todas as seções
+    document.querySelectorAll(".section").forEach(sec => sec.classList.add("hidden"));
+    // mostra a seção desejada
+    document.getElementById(id).classList.remove("hidden");
 
-    document.querySelectorAll('.menu-btn').forEach(b => b.classList.remove('active'));
-    btn.classList.add('active');
+    // remove "active" de todos os botões
+    document.querySelectorAll(".menu-btn").forEach(b => b.classList.remove("active"));
+    // adiciona "active" no botão clicado
+    btn.classList.add("active");
   }
 </script>
 
